--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Receta</title>
-  <%= stylesheet_link_tag    'application.css.scss' %>
+  <%= stylesheet_link_tag    'application.css' %>
   <%= javascript_include_tag 'application.js' %>
   <%= csrf_meta_tags %>
 </head>
